# wcns_v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ghost.md  init_part.md  input.ini  main_cycle_plan.md  metric.md  metric_checklist.md  mpi.md  mpi_checklist.md
include/bc/: bc_applier.h
include/core/: config.h  history_monitor.h  history_monitor.hxx  residual.h  residual.hxx
include/field/: field.h
include/grid/: boundary_condition.h  boundary_condition.hxx  connectivity.h  connectivity.hxx  grid.h  grid.hxx
include/init/: flow_initializer.h  flow_initializer.hxx
include/io/: cgns_reader.h  config_reader.h  restart_writer.h  restart_writer.hxx  solution_writer.h  solution_writer.hxx
include/parallel/: decomposer.h  flux_halo_exchange.h  flux_halo_exchange.hxx  halo_exchange.h  halo_exchange.hxx  local_block.h  local_block.hxx  parallel_env.h  parallel_manager.h  parallel_manager.hxx
include/scheme/: body_force.h  body_force.hxx  interp_diff.h  interp_diff.hxx  inviscid_rhs.h  inviscid_rhs.hxx  riemann_solver.h  riemann_solver.hxx  viscid_rhs.h  viscid_rhs.hxx  wcns_interp.h  wcns_interp.hxx
include/time/: lu_sgs.h  lu_sgs.hxx  time_integrator.h  time_integrator.hxx  time_step.h
include/wcns_v2/bc/: bc_applier.h  bc_applier.hxx
include/wcns_v2/core/: config.h  config.hxx  history_monitor.h  history_monitor.hxx  residual.h  residual.hxx
input/: channel_structured.cgns  channel_structured_twozone.cgns
input/Riemann_2d/: input.ini  riemann_2d_structured.cgns
src/: main.cpp
src/io/: cgns_reader.cpp  config_reader.cpp
(+45 files in other folders)
